--- a/bio/index.html
+++ b/bio/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="col-md-8 col-md-offset-1">
           <h2>Bio</h2>
-          Danny Yagan is the best boss ever. I wish I was as cool as he is.
+          BIO Placeholder
         </div>
       </div>
     </div>
