--- a/teaching/index.html
+++ b/teaching/index.html
@@ -28,7 +28,7 @@
 
 
 
-<link rel="stylesheet" href="https://www.dyagan.github.io/css/main.css">
+<link rel="stylesheet" href="https://www.dyagan.github.io/css/main.css" type="text/css">
     
 
   </head>
